--- a/prototipo1/index.html
+++ b/prototipo1/index.html
@@ -61,9 +61,9 @@
         float: left;
         transition: transform 1s cubic-bezier(0,1.59,.71,-0.64);
       }
-      .surfboy:hover{
+      .surfboy:active{
         transition: transform 1s cubic-bezier(0,1.59,.71,-0.64);
-        transform: rotate(20deg);
+        transform: rotate(0deg) translateX(400px);
       }
       .surfboy img{
         width: 6em;
