--- a/Web-Buena-Surferos/index.html
+++ b/Web-Buena-Surferos/index.html
@@ -29,8 +29,8 @@
       <header class="p_fixed w_100 left top zindex_5 ts_0_5">
         <div class="container w_100 dflex flex_wrap jc_sb ai_c ts_0_5">
           <a href="#" class="logo">
-            <img src="images/logo.png" alt="" class="primary" />
-            <img src="images/logo2.png" alt="" class="secondary" />
+            <img src="images/eco-surf-logo-w-1.png" alt="" class="primary" />
+            <img src="images/eco-surf-logo-b-1.png" alt="" class="secondary" />
           </a>
 
           <div class="headermenu">
@@ -111,7 +111,7 @@
             <div class="item f_l">
               <div class="thumb f_l_w_100 mb_60 mb_30_tablet">
                 <img
-                  src="images/pic2.jpg"
+                  src="images/costa.jpg"
                   alt=""
                   class="img_basic img_fit aspectratio_3_2"
                 />
