fuentes y logos nuevos

--- a/Web-Buena-Surferos/index.html
+++ b/Web-Buena-Surferos/index.html
@@ -111,7 +111,7 @@
             <div class="item f_l">
               <div class="thumb f_l_w_100 mb_60 mb_30_tablet">
                 <img
-                  src="images/costa.jpg"
+                  src="images/concert.jpeg"
                   alt=""
                   class="img_basic img_fit aspectratio_3_2"
                 />
@@ -132,7 +132,7 @@
             <div class="item f_l">
               <div class="thumb f_l_w_100 mb_60 mb_30_tablet">
                 <img
-                  src="images/pic3.jpg"
+                  src="images/beach-cleaners.jpg"
                   alt=""
                   class="img_basic img_fit aspectratio_3_2"
                 />
