--- a/Web-Buena-Surferos/index.html
+++ b/Web-Buena-Surferos/index.html
@@ -14,11 +14,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700;800&display=swap"
     rel="stylesheet" />
 
-  <link rel="stylesheet" href="fonts/fa/css/all.css" />
   <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="style-global-blocks.css" />
   <link rel="stylesheet" href="style-global.css" />
   <link rel="stylesheet" href="style-responsive.css" />
+  <link rel="stylesheet" href="melaku.css">
 
   <script src="js/jquery.js"></script>
 </head>
