--- a/New Web/newsite no bs/index.html
+++ b/New Web/newsite no bs/index.html
@@ -5,18 +5,147 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Página con Video de Fondo</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="global.css" />
+    <link rel="stylesheet" href="about.css" />
+    <link rel="stylesheet" href="navbar.css" />
   </head>
   <body>
-    <nav class="navbar">
-      <div class="container">
-        <h1>Logo</h1>
-        <ul class="menu">
-          <li><a href="#">Inicio</a></li>
-          <li><a href="#">Sobre nosotros</a></li>
-          <li><a href="#">Contacto</a></li>
-        </ul>
+    <!-- ============================================ -->
+    <!--                 Navigation                   -->
+    <!-- ============================================ -->
+
+    <header id="cs-navigation">
+      <div class="cs-container">
+        <!--Nav Logo-->
+        <!--Logo is turned white in the css with a filter on dark mode-->
+        <a href="" class="cs-logo" aria-label="back to home">
+          <img
+            src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Graphics/day-care.svg"
+            alt="logo"
+            width="210"
+            height="29"
+            aria-hidden="true"
+            decoding="async"
+          />
+        </a>
+        <!--Navigation List-->
+        <nav class="cs-nav" role="navigation">
+          <!--Mobile Nav Toggle-->
+          <button class="cs-toggle" aria-label="mobile menu toggle">
+            <div class="cs-box" aria-hidden="true">
+              <span class="cs-line cs-line1" aria-hidden="true"></span>
+              <span class="cs-line cs-line2" aria-hidden="true"></span>
+              <span class="cs-line cs-line3" aria-hidden="true"></span>
+            </div>
+          </button>
+          <!-- We need a wrapper div so we can set a fixed height on the cs-ul in case the nav list gets too long from too many dropdowns being opened and needs to have an overflow scroll. This wrapper acts as the background so it can go the full height of the screen and not cut off any overflowing nav items while the cs-ul stops short of the bottom of the screen, which keeps all nav items in view no matter how mnay there are-->
+          <div class="cs-ul-wrapper">
+            <ul id="cs-expanded" class="cs-ul" aria-expanded="false">
+              <li class="cs-li">
+                <a href="" class="cs-li-link cs-active"> Home </a>
+              </li>
+              <li class="cs-li">
+                <a href="" class="cs-li-link"> About </a>
+              </li>
+              <!--Copy and paste this cs-dropdown list item and replace any .cs-li with this cs-dropdown group to make a new dropdown and it will work-->
+              <li class="cs-li cs-dropdown" tabindex="0">
+                <span class="cs-li-link">
+                  Services
+                  <img
+                    class="cs-drop-icon"
+                    src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/down-gold.svg"
+                    alt="dropdown icon"
+                    width="15"
+                    height="15"
+                    decoding="async"
+                    aria-hidden="true"
+                  />
+                </span>
+                <ul class="cs-drop-ul">
+                  <li class="cs-drop-li">
+                    <a href="" class="cs-li-link cs-drop-link">Registration</a>
+                  </li>
+                  <li class="cs-drop-li">
+                    <a href="" class="cs-li-link cs-drop-link">Our Classes</a>
+                  </li>
+                </ul>
+              </li>
+              <li class="cs-li">
+                <a href="" class="cs-li-link"> Blog </a>
+              </li>
+              <li class="cs-li">
+                <a href="" class="cs-li-link"> Contact </a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+        <div class="cs-contact-group">
+          <a href="tel:+84 1985 33 999" class="cs-phone">
+            <img
+              class="cs-phone-icon"
+              src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/phone-1a.svg"
+              alt="logo"
+              width="24"
+              height="24"
+              aria-hidden="true"
+              decoding="async"
+            />
+            +84 1985 33 999
+          </a>
+          <div class="cs-social">
+            <a href="" class="cs-social-link">
+              <img
+                class="cs-social-icon"
+                src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/facebook-1a.svg"
+                alt="logo"
+                width="12"
+                height="12"
+                aria-hidden="true"
+                decoding="async"
+              />
+            </a>
+            <a href="" class="cs-social-link">
+              <img
+                class="cs-social-icon"
+                src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/twitter-1a.svg"
+                alt="logo"
+                width="12"
+                height="12"
+                aria-hidden="true"
+                decoding="async"
+              />
+            </a>
+            <a href="" class="cs-social-link">
+              <img
+                class="cs-social-icon"
+                src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/instagram1a.svg"
+                alt="logo"
+                width="12"
+                height="12"
+                aria-hidden="true"
+                decoding="async"
+              />
+            </a>
+            <a href="" class="cs-social-link">
+              <img
+                class="cs-social-icon"
+                src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/youtube1a.svg"
+                alt="logo"
+                width="12"
+                height="12"
+                aria-hidden="true"
+                decoding="async"
+              />
+            </a>
+          </div>
+        </div>
+        <!--Dark Mode toggle, uncomment button code if you want to enable a dark mode toggle-->
+        <!-- <button id="dark-mode-toggle" aria-label="dark mode toggle">
+          <svg class="cs-moon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 480 480" style="enable-background:new 0 0 480 480" xml:space="preserve"><path d="M459.782 347.328c-4.288-5.28-11.488-7.232-17.824-4.96-17.76 6.368-37.024 9.632-57.312 9.632-97.056 0-176-78.976-176-176 0-58.4 28.832-112.768 77.12-145.472 5.472-3.712 8.096-10.4 6.624-16.832S285.638 2.4 279.078 1.44C271.59.352 264.134 0 256.646 0c-132.352 0-240 107.648-240 240s107.648 240 240 240c84 0 160.416-42.688 204.352-114.176 3.552-5.792 3.04-13.184-1.216-18.496z"/></svg>
+          <img class="cs-sun" aria-hidden="true" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Fsun.svg" decoding="async" alt="moon" width="15" height="15">
+      </button> -->
       </div>
-    </nav>
+    </header>
 
     <section class="hero">
       <video autoplay muted loop id="video-background">
@@ -85,6 +214,143 @@
         class="about-image"
         alt="Imagen Acerca de Nosotros"
       />
+    </section>
+
+    <!-- ============================================ -->
+    <!--                  Services                    -->
+    <!-- ============================================ -->
+
+    <section id="services-1666">
+      <div class="cs-container">
+        <div class="cs-image-group">
+          <picture class="cs-picture">
+            <!--Mobile Image-->
+            <source
+              media="(max-width: 600px)"
+              srcset="
+                https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/people-standing.jpeg
+              "
+            />
+            <!--Tablet and above Image-->
+            <source
+              media="(min-width: 601px)"
+              srcset="
+                https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/people-standing.jpeg
+              "
+            />
+            <img
+              loading="lazy"
+              decoding="async"
+              src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/people-standing.jpeg"
+              alt="people standing"
+              width="605"
+              height="690"
+            />
+          </picture>
+        </div>
+        <div class="cs-content">
+          <span class="cs-topper">Actividades</span>
+          <h2 class="cs-title">No vas a tener tiempo para aburrirte</h2>
+          <p class="cs-text">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum
+            accusantium fuga dolore nulla provident inventore possimus,
+            incidunt, tenetur voluptate laudantium consequuntur commodi. In
+            perferendis quod, non ad veniam similique assumenda deleniti nobis
+            quaerat ipsum cum! Velit provident eligendi cumque excepturi!
+          </p>
+          <ul class="cs-faq-group">
+            <li class="cs-faq-item active">
+              <button class="cs-button">
+                <img
+                  class="cs-icon"
+                  aria-hidden="true"
+                  loading="lazy"
+                  decoding="async"
+                  src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/computer-gold.svg"
+                  alt="icon"
+                  width="32"
+                  height="32"
+                />
+                <span class="cs-button-text"> Clases de Surf </span>
+                <span class="cs-indicator" aria-hidden="true"></span>
+              </button>
+              <p class="cs-item-p">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod
+                sapiente placeat enim molestias quam, illum ullam ipsa repellat,
+                necessitatibus quis cumque voluptatum nesciunt. Quia possimus
+                est in recusandae saepe nostrum.
+              </p>
+            </li>
+            <li class="cs-faq-item">
+              <button class="cs-button">
+                <img
+                  class="cs-icon"
+                  aria-hidden="true"
+                  loading="lazy"
+                  decoding="async"
+                  src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/calendar-gold.svg"
+                  alt="icon"
+                  width="32"
+                  height="32"
+                />
+                <span class="cs-button-text"> Charlas Medioambientales </span>
+                <span class="cs-indicator" aria-hidden="true"></span>
+              </button>
+              <p class="cs-item-p">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod
+                sapiente placeat enim molestias quam, illum ullam ipsa repellat,
+                necessitatibus quis cumque voluptatum nesciunt. Quia possimus
+                est in recusandae saepe nostrum.
+              </p>
+            </li>
+            <li class="cs-faq-item">
+              <button class="cs-button">
+                <img
+                  class="cs-icon"
+                  aria-hidden="true"
+                  loading="lazy"
+                  decoding="async"
+                  src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/map-pin-gold.svg"
+                  alt="icon"
+                  width="32"
+                  height="32"
+                />
+                <span class="cs-button-text"> Limpieza de Playas </span>
+                <span class="cs-indicator" aria-hidden="true"></span>
+              </button>
+              <p class="cs-item-p">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod
+                sapiente placeat enim molestias quam, illum ullam ipsa repellat,
+                necessitatibus quis cumque voluptatum nesciunt. Quia possimus
+                est in recusandae saepe nostrum.
+              </p>
+            </li>
+            <li class="cs-faq-item">
+              <button class="cs-button">
+                <img
+                  class="cs-icon"
+                  aria-hidden="true"
+                  loading="lazy"
+                  decoding="async"
+                  src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/map-pin-gold-2.svg"
+                  alt="icon"
+                  width="32"
+                  height="32"
+                />
+                <span class="cs-button-text"> Conciertos </span>
+                <span class="cs-indicator" aria-hidden="true"></span>
+              </button>
+              <p class="cs-item-p">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod
+                sapiente placeat enim molestias quam, illum ullam ipsa repellat,
+                necessitatibus quis cumque voluptatum nesciunt. Quia possimus
+                est in recusandae saepe nostrum.
+              </p>
+            </li>
+          </ul>
+          <a href="" class="cs-button-solid">Comprar Entradas</a>
+        </div>
+      </div>
     </section>
 
     <section class="artists-section">
@@ -459,6 +725,57 @@
             tab.classList.remove("active");
           }
         });
+      }
+
+      //seccion about
+
+      const faqItems = Array.from(document.querySelectorAll(".cs-faq-item"));
+      for (const item of faqItems) {
+        const onClick = () => {
+          item.classList.toggle("active");
+        };
+        item.addEventListener("click", onClick);
+      }
+
+      //Js para el navbar
+
+      // add classes for mobile navigation toggling
+      var CSbody = document.querySelector("body");
+      const CSnavbarMenu = document.querySelector("#cs-navigation");
+      const CShamburgerMenu = document.querySelector(
+        "#cs-navigation .cs-toggle"
+      );
+
+      CShamburgerMenu.addEventListener("click", function () {
+        CShamburgerMenu.classList.toggle("cs-active");
+        CSnavbarMenu.classList.toggle("cs-active");
+        CSbody.classList.toggle("cs-open");
+        // run the function to check the aria-expanded value
+        ariaExpanded();
+      });
+
+      // This script adds a class to the body after scrolling 100px
+      // and we used these body.scroll styles to create some on scroll
+      // animations with the navbar
+
+      document.addEventListener("scroll", (e) => {
+        const scroll = document.documentElement.scrollTop;
+        if (scroll >= 100) {
+          document.querySelector("body").classList.add("scroll");
+        } else {
+          document.querySelector("body").classList.remove("scroll");
+        }
+      });
+
+      // mobile nav toggle code
+      const dropDowns = Array.from(
+        document.querySelectorAll("#cs-navigation .cs-dropdown")
+      );
+      for (const item of dropDowns) {
+        const onClick = () => {
+          item.classList.toggle("cs-active");
+        };
+        item.addEventListener("click", onClick);
       }
     </script>
   </body>
