--- a/New Web/index.html
+++ b/New Web/index.html
@@ -220,6 +220,52 @@
         </div>
       </section>
 
+      <!-- ============================================ -->
+      <!--                   Logos                      -->
+      <!-- ============================================ -->
+
+      <section id="logos-572">
+        <div class="cs-container">
+          <!--Ideally you want to use svg's for the file path image, which is why these aren't wrapped in picture elements for different screen sizes-->
+          <img
+            class="cs-logo"
+            src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Logos/logo1.png"
+            alt="logo"
+            width="287"
+            height="65"
+            loading="lazy"
+            decoding="async"
+          />
+          <img
+            class="cs-logo"
+            src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Logos/logo2.png"
+            alt="logo"
+            width="229"
+            height="55"
+            loading="lazy"
+            decoding="async"
+          />
+          <img
+            class="cs-logo"
+            src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Logos/logo3.png"
+            alt="logo"
+            width="235"
+            height="53"
+            loading="lazy"
+            decoding="async"
+          />
+          <img
+            class="cs-logo"
+            src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Logos/logo4.png"
+            alt="logo"
+            width="228"
+            height="61"
+            loading="lazy"
+            decoding="async"
+          />
+        </div>
+      </section>
+
       <section class="artists-section section-padding" id="section_3">
         <div class="container">
           <div class="row justify-content-center">
