--- a/New Web/newsite no bs/index.html
+++ b/New Web/newsite no bs/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="sponsors.css" />
     <link rel="stylesheet" href="pricing.css" />
     <link rel="stylesheet" href="whyUsSection.css" />
+    <link rel="stylesheet" href="logo-slider.css" />
+    <link rel="stylesheet" href="speakers.css" />
   </head>
   <body>
     <!-- ============================================ -->
@@ -510,107 +512,117 @@
       </div>
     </section>
 
+    <!-- ============================================ -->
+    <!--                   Speakers Section              -->
+    <!-- ============================================ -->
     <section class="artists-section">
-      <div class="container">
-        <h2 class="mb-4">Meet Artists</h2>
-        <div class="artists-container">
-          <div class="artist">
-            <img
-              src="images/artists/joecalih-UmTZqmMvQcw-unsplash.jpg"
-              alt="Madona"
-            />
-            <div class="artist-info">
-              <p><strong>Name:</strong> Madona</p>
-              <p><strong>Birthdate:</strong> August 16, 1958</p>
-              <p><strong>Music:</strong> Pop, R&amp;B</p>
-              <hr />
-              <p>
-                <strong>Youtube Channel:</strong>
-                <a href="#">Madona Official</a>
-              </p>
-            </div>
+      <div class="card">
+        <div class="card-content">
+          <img
+            src="https://via.placeholder.com/150"
+            alt="Person"
+            class="card-image"
+          />
+          <div class="overlay">
+            <h3 class="card-title">Título del Texto</h3>
+            <p class="card-description">Descripción de la tarjeta.</p>
           </div>
-          <div class="artist">
-            <img
-              src="images/artists/abstral-official-bdlMO9z5yco-unsplash.jpg"
-              alt="Rihana"
-            />
-            <div class="artist-info">
-              <p><strong>Name:</strong> Rihana</p>
-              <p><strong>Birthdate:</strong> Feb 20, 1988</p>
-              <p><strong>Music:</strong> Country</p>
-              <hr />
-              <p>
-                <strong>Youtube Channel:</strong>
-                <a href="#">Rihana Official</a>
-              </p>
-            </div>
+        </div>
+      </div>
+      <!-- Una persona nueva-->
+      <div class="card">
+        <div class="card-content">
+          <img
+            src="https://via.placeholder.com/150"
+            alt="Person"
+            class="card-image"
+          />
+          <div class="overlay">
+            <h3 class="card-title">Título del Texto</h3>
+            <p class="card-description">Descripción de la tarjeta.</p>
           </div>
-          <div class="artist">
-            <img
-              src="images/artists/soundtrap-rAT6FJ6wltE-unsplash.jpg"
-              alt="Bruno Bros"
-            />
-            <div class="artist-info">
-              <p><strong>Name:</strong> Bruno Bros</p>
-              <p><strong>Birthdate:</strong> October 8, 1985</p>
-              <p><strong>Music:</strong> Pop</p>
-              <hr />
-              <p>
-                <strong>Youtube Channel:</strong> <a href="#">Bruno Official</a>
-              </p>
-            </div>
+        </div>
+      </div>
+      <!-- Una persona nueva-->
+      <div class="card">
+        <div class="card-content">
+          <img
+            src="https://via.placeholder.com/150"
+            alt="Person"
+            class="card-image"
+          />
+          <div class="overlay">
+            <h3 class="card-title">Título del Texto</h3>
+            <p class="card-description">Descripción de la tarjeta.</p>
+          </div>
+        </div>
+      </div>
+      <!-- Una persona nueva-->
+      <div class="card">
+        <div class="card-content">
+          <img
+            src="https://via.placeholder.com/150"
+            alt="Person"
+            class="card-image"
+          />
+          <div class="overlay">
+            <h3 class="card-title">Título del Texto</h3>
+            <p class="card-description">Descripción de la tarjeta.</p>
           </div>
         </div>
       </div>
     </section>
 
-    
     <!-- ============================================ -->
     <!--                   Sponsor Logos              -->
     <!-- ============================================ -->
 
-    <section id="logos-572">
-      <div class="cs-container">
-        <!--Ideally you want to use svg's for the file path image, which is why these aren't wrapped in picture elements for different screen sizes-->
-        <img
-          class="cs-logo"
-          src="../images/logos/Billabong-logo.png"
-          alt="logo"
-          width="287"
-          height="65"
-          loading="lazy"
-          decoding="async"
-        />
-        <img
-          class="cs-logo"
-          src="../images/logos/Oakley_logo.svg.png"
-          alt="logo"
-          width="229"
-          height="55"
-          loading="lazy"
-          decoding="async"
-        />
-        <img
-          class="cs-logo"
-          src="../images/logos/redbull-logo.png"
-          alt="logo"
-          width="235"
-          height="53"
-          loading="lazy"
-          decoding="async"
-        />
-        <img
-          class="cs-logo"
-          src="../images/logos/quicksilver-logo.png"
-          alt="logo"
-          width="228"
-          height="61"
-          loading="lazy"
-          decoding="async"
-        />
+    <div class="logo-slider">
+      <div class="logo-slide-track">
+        <div class="slide">
+          <img src="../images/logos/Billabong-logo.png" alt="" />
+        </div>
+        <div class="slide">
+          <img src="../images/logos/quicksilver-logo.png" alt="" />
+        </div>
+        <div class="slide">
+          <img src="../images/logos/Oakley_logo.svg.png" alt="" />
+        </div>
+        <div class="slide">
+          <img src="../images/logos/redbull-logo.png" alt="" />
+        </div>
+        <div class="slide">
+          <img src="../images/logos/columbia.png" alt="" />
+        </div>
+        <div class="slide">
+          <img src="../images/logos/element-logo.png" alt="" />
+        </div>
+        <div class="slide">
+          <img src="../images/logos/emblem-Vans.jpg" alt="" />
+        </div>
+        <div class="slide">
+          <img src="../images/logos/ONeill-logo.png" alt="" />
+        </div>
+        <div class="slide">
+          <img src="../images/logos/ripcurl-logo.png" alt="" />
+        </div>
+        <div class="slide">
+          <img src="../images/logos/volcom-2.svg" alt="" />
+        </div>
+        <div class="slide">
+          <img src="../images/logos/ministerio-cultura-deporte.png" alt="" />
+        </div>
+        <div class="slide">
+          <img src="../images/logos/nextgeneu_en.jpg" alt="" />
+        </div>
+        <div class="slide">
+          <img src="../images/logos/ods.jpg" alt="" />
+        </div>
+        <div class="slide">
+          <img src="../images/logos/eco-surf-logo-b-2.png" alt="" />
+        </div>
       </div>
-    </section>
+    </div>
 
     <!-- ============================================ -->
     <!--                   Pricing                    -->
